<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageCountry"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/country_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryName" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Israel" />

    <TextView
        android:id="@+id/totalCasesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/total_case"
        app:layout_constraintStart_toEndOf="@+id/imageCountry"
        app:layout_constraintTop_toTopOf="@+id/imageCountry" />

    <TextView
        android:id="@+id/cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/totalCasesTitle"
        app:layout_constraintTop_toTopOf="@+id/totalCasesTitle"
        tools:text="2000" />

    <TextView
        android:id="@+id/todayCasesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/new_cases"
        app:layout_constraintStart_toEndOf="@+id/cases"
        app:layout_constraintTop_toTopOf="@+id/totalCasesTitle" />

    <TextView
        android:id="@+id/todayCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/todayCasesTitle"
        app:layout_constraintTop_toTopOf="@+id/todayCasesTitle"
        tools:text="100" />

    <TextView
        android:id="@+id/recoveredTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/recovered"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/imageCountry"
        app:layout_constraintStart_toEndOf="@+id/imageCountry" />

    <TextView
        android:id="@+id/recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/recoveredTitle"
        app:layout_constraintTop_toTopOf="@+id/recoveredTitle"
        tools:text="2000" />

    <TextView
        android:id="@+id/deathsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/deaths"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/recoveredTitle"
        app:layout_constraintStart_toEndOf="@+id/recovered" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/deathsTitle"
        app:layout_constraintTop_toTopOf="@+id/deathsTitle"
        tools:text="1" />
</androidx.constraintlayout.widget.ConstraintLayout>